# practice

./: 404.html  LICENSE  README.md  blog.html  docs.html  index.html  markdown-page.html  pyproject.toml  shell.nix  sitemap.xml
assets/js/: 0e384e19.252d976b.js  0e384e19.2d5761de.js  0e384e19.bd5439c2.js  18c41134.48878fa9.js  18c41134.55dbe18f.js  18c41134.9fc53c8c.js  196470d3.56350767.js  1e4232ab.22646d96.js  1e4232ab.22c8cd71.js  1e4232ab.efaed860.js  21198540.f7d78ad6.js  21c83553.06dfa947.js  22aa657e.0a0ec7d3.js  393be207.0ed3480b.js  393be207.f4016d6b.js  3aefff77.8738ecf2.js  3bc0516f.0f9b9b75.js  47a19079.7618e18d.js  4cd1e43d.7c5e16cd.js  533a09ca.593fa08c.js  533a09ca.726cd76c.js  533a09ca.9014dcd0.js  59362658.2756a8dc.js  59362658.2ac500e5.js  59362658.64a9768a.js  5c868d36.ae74f867.js  5c868d36.bb99e73f.js  5c868d36.eef5178f.js  5e0c3a41.d2d3d685.js  6350606b.52cec8c9.js  65215196.72fb7d81.js  6be3429a.28ceb079.js  73664a40.0a96b8f6.js  73664a40.4ac32200.js  73664a40.ef99e952.js  7661071f.a08d07a1.js  7661071f.e1b15010.js  7661071f.f0d4fcc0.js  779dfe34.6e52aa36.js  779dfe34.f8e6db7e.js  (+61 more)
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
docs/: doc2.html  intro.html
docs/category/: tutorial---basics.html  tutorial---extras.html
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  (+3 more)
notebooks/: hpt.ipynb  mlhpt_hw.pkl  mlms.pkl  mlp.pkl  prophet.ipynb
(+2 files in other folders)
